--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,132 @@
+# Environment variables (CRITICAL - Never commit API keys)
 .env
+.env.local
+.env.development
+.env.test
+.env.production
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+share/python-wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
+
+# Virtual Environment
+venv/
+env/
+ENV/
+env.bak/
+venv.bak/
+.venv/
+
+# IDE and Editor files
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+.DS_Store
+Thumbs.db
+
+# Logs and Data
+*.log
+logs/
+LogsBinanceQuantTradingEngine.log
+trading_data/
+backtest_results/
+*.csv
+*.json
+*.pkl
+*.db
+*.sqlite
+
+# Trading specific files
+trades/
+positions/
+order_history/
+balance_history/
+performance_reports/
+
+# Jupyter Notebooks
+.ipynb_checkpoints/
+*.ipynb
+
+# pytest
+.pytest_cache/
+.coverage
+htmlcov/
+.tox/
+.nox/
+
+# mypy
+.mypy_cache/
+.dmypy.json
+dmypy.json
+
+# Documentation
+docs/_build/
+.readthedocs.yml
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Temporary files
+*.tmp
+*.temp
+temp/
+tmp/
+
+# Archive files
+*.zip
+*.tar.gz
+*.rar
+
+# Configuration files that might contain sensitive data
+config.ini
+config.yaml
+config.json
+settings.json
+
+# API Keys and Secrets (additional patterns)
+*secret*
+*key*
+*token*
+*password*
+*credentials*
+secrets/
+keys/
+
+# Backup files
+*.bak
+*.backup
+*~
+
+# Node.js (if using any JS tools)
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
