--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,22 @@
-python-dotenv==1.0.1
+# Core dependencies - latest versions
+requests>=2.32.4
+pandas>=2.3.0
+numpy>=2.3.1
+
+
+# Machine Learning
+scikit-learn>=1.7.0
+
+# Technical Analysis
+TA-Lib>=0.6.4
+
+# Environment variables
+python-dotenv>=1.1.1
+
+#Binance Client
+binance-futures-connector=4.1.0
+
+# FastAPI and Web Server
+fastapi>=0.104.0
+uvicorn[standard]>=0.24.0
+pydantic>=2.5.0
