--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,8 @@ numpy>=2.3.1
 scikit-learn>=1.7.0
 
 # Technical Analysis
-TA-Lib>=0.4.0
+ta-lib-bin
+
 # Environment variables
 python-dotenv>=1.1.1
 
